methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:5: error: too many arguments for method gauche: ()Unit
  gauche(2)
        ^