methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
 	avance(2)
 	gauche()
  avance(7)
  gauche(2)
}